...

enum MilestoneStatus {
  notStarted('Noch nicht begonnen'),
  onTrack('Im Plan'),
  offTrack('Außer Plan'),
  onHold('Pausiert'),
  achieved('Erreicht');

  const MilestoneStatus(this.label);
  final String label;
}

enum GoalColor {
...
